adding conclusions and more comments

--- a/Heroesofpymoli_divya.ipynb
+++ b/Heroesofpymoli_divya.ipynb
@@ -1324,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1354,6 +1354,8 @@
     "#purchase_data_original\n",
     "\n",
     "#purchase_data_original.head()\n",
+    "## Trying to plot the data\n",
+    "import matplotlib\n",
     "\n",
     "### Check how many males fell in which age category.\n",
     "checkgender=pd.DataFrame(purchase_data_original)\n",
@@ -1391,7 +1393,14 @@
     "summaryagegender= pd.merge(agecount_Other,summaryagegender, on = \"age label\")\n",
     "summaryagegender=summaryagegender.rename(columns = {'Gender':'others','Gender_x':'Male', 'Gender_y':'Female'}, inplace = False)\n",
     "print(summaryagegender)\n",
-    "\n"
+    "\n",
+    "\n",
+    "#agelabel=summaryagegender[\"age label\"]\n",
+    "#print(agelabel)\n",
+    "#ymale=summaryagegender['Male']\n",
+    "#matplotlib.pyplot.bar(x, height, width=0.8, bottom=None, *, align='center', data=None, **kwargs)[source]\n",
+    "\n",
+    "#matplotlib.pyplot.bar(agelabel, ymale, width=0.8, bottom=None,  align='center', data=None, **kwargs)[source]"
    ]
   },
   {
